<resources>
<!--    <string name="app_name">My First App</string>-->
<!--    <string name="start_navi">Start Navigation</string>-->
<!--    <string name="stop_navi">Stop Navigation</string>-->
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="bsquared">Bsquared</string>
    <string name="thanks_for_using_our_app_n_nwe_would_love_to_hear_from_you_nreach_out_to_us_with_suggestions_or_bug_reports_here">Thanks for using our app!\n\nWe would love to hear from you.\nReach out to us with suggestions or bug reports here:</string>
    <string name="right_arrow">right_arrow</string>
    <string name="right_arrow2">right_arrow2</string>
    <string name="thanks_for_using_our_app_n_nwe_hope_you_enjoy_your_stay">Thanks for using our app!\n\nWe hope you enjoy your stay.</string>
    <string name="logo_img">logo_img</string>
    <string name="input">Input</string>
    <string name="your_message_here">Your message here!</string>
    <string name="google_recaptcha">Google Recaptcha</string>
    <string name="verify_captcha">Verify captcha</string>
    <string name="i_am_not_a_robot">I am not a robot</string>
    <string name="sign_out">Sign out</string>
    <string name="send_message">Send message</string>
    <string name="main">Main</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="chatroom">Chatroom</string>
    <string name="events">Events</string>
    <string name="Open">Navbar</string>
    <string name="Close">Navbar</string>
    <string name="add_event">add_event</string>
    <string name="add_event_string">Add Event</string>
    <string name="my_hosted_event">My Hosted Event</string>
    <string name="describe_your_event">Describe your event:</string>
    <string name="event_location">Event location:</string>
    <string name="maybe_you_re_going_for_a_certain_age_group">Maybe you\'re going for a certain age group:</string>
    <string name="all_ages">All ages</string>
    <string name="adult">Adult</string>
    <string name="youth">Youth</string>
    <string name="young_adult">Young adult</string>
    <string name="tip_try_to_keep_it_short_and_fun">Tip: Try to keep it short and fun!\nTip: Events expire in 24 hours</string>
    <string name="tip_be_sure_to_meet_in_a_public_area_first_e_g_library_coffee_shops_etc">Tip: Be sure to meet in a public area first (e.g. library, coffee shops, etc.)</string>
    <string name="add_button">add_button</string>
    <string name="for_screen">For</string>
    <string name="you_are_the_host">You are the host</string>
    <string name="people_interested_in_your_event_may_have_some_questions_please_answer_them">People interested in your event may have some questions — please answer them!\n\nWe will alert you here whenever someone joins.</string>
    <string name="whoops_be_sure_to_create_or_join_an_event_first">Whoops. Be sure to create an event first.</string>
    <string name="placeholder">PLACEHOLDER1</string>
    <string name="approximate_location">Approximate location:</string>
    <string name="ask_questions_concerns_here">Ask questions/concerns here</string>
    <string name="description">Description:</string>
    <string name="placeholder2">PLACEHOLDER</string>
    <string name="join">JOIN</string>
    <string name="people_so_far">People so far:</string>
    <string name="placeholder3">0 people so far</string>
    <string name="placeholder5">0 people so far</string>
    <string name="close_event">CLOSE EVENT</string>
    <string name="global_chat">Global chat</string>
    <string name="welcome">Welcome!</string>
    <string name="auto_detect_location">AUTO DETECT LOCATION</string>
    <string name="generate_username">GENERATE USERNAME</string>
    <string name="you_are_in">You are in 07701</string>
    <string name="local_chat">Local chat</string>
    <string name="enter_zipcode">ENTER ZIPCODE</string>
    <string name="leave">LEAVE</string>
    <string name="safety_tips_for_a_great_time_out">Safety tips for a great time out! —</string>
    <string name="_1_please_make_sure_your_surroundings_are_safe_before_meeting_your_host_n_n2_are_you_in_a_public_open_area_with_other_people_around_n_n3_go_with_a_friend_n_n4_see_if_you_can_have_someone_check_up_on_you_periodically_n_n5_designate_a_driver">**Please follow local and national guidelines for COVID-19.**\n\n1. Please make sure your surroundings are safe before meeting your host.\n\n2. Are you in a public/open area with other people around?\n\n3. Go with a friend!\n\n4. See if you can have someone check up on you periodically.\n\n5. Designate a driver!!</string>
    <string name="be_there">Be there!</string>
    <string name="enter_event_address">Enter event address</string>
    <string name="describe_your_event2">Describe your event</string>
    <string name="loading_thanks_for_your_patience">Loading... Thanks for your patience!!</string>
    <string name="app_name">Voice Guidance</string>
    <string name="start_navi">Start Navigation</string>
    <string name="stop_navi">Stop Navigation</string>
    <string name="engine_init_error">Map engine initialization</string>
    <string name="voice_skins">Voice Skins</string>
    <string name="download_voices">Download Voices…</string>
    <string name="voice_packages">Voice Packages</string>
    <string name="remove_package">Are you sure you want to delete the voice package?</string>
    <string name="install_package">Are you sure you want to download the voice package?</string>
    <string name="get_more_voices">GET MORE VOICES</string>
    <string name="set_audio">SET AUDIO</string>
    <string name="terms_text"><a href="https://docs.google.com/document/d/1DG6cLO4Iax_9S9-JdspQfpf3Y7Sg9nXlynPJbB0pm8g/edit?usp=sharing">By using this app, you agree to Bsquared\'s Terms and Conditions and Privacy Policy (tap link)</a></string>
</resources>