<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".HasJoined">

    <LinearLayout
        android:id="@+id/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:orientation="horizontal" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:indeterminate="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/be_there"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/be_there"
        android:textAlignment="center"
        android:textColor="#CDCF64"
        android:elevation="2dp"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        tools:layout_editor_absoluteX="132dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="355dp"
        android:layout_height="0dp"
        android:layout_marginTop="180dp"
        android:text="@string/safety_tips_for_a_great_time_out"
        android:textAlignment="center"
        android:elevation="2dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:text="@string/_1_please_make_sure_your_surroundings_are_safe_before_meeting_your_host_n_n2_are_you_in_a_public_open_area_with_other_people_around_n_n3_go_with_a_friend_n_n4_see_if_you_can_have_someone_check_up_on_you_periodically_n_n5_designate_a_driver"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/voiceCtrlButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="106dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#CDCF64"
        android:text="@string/set_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/naviCtrlButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="106dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        android:background="#CDCF64"
        android:text="@string/start_navi"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/leave_button"
        android:layout_width="106dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:background="#CDCF64"
        android:text="@string/leave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <fragment
        android:id="@+id/mapfragment"
        class="com.here.android.mpa.mapping.AndroidXMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>